readme and fixes

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -2,10 +2,14 @@
 Name: simple-pdf-preview
 ---
 
+File:
+  extensions:
+    - SimplePdfPreviewImageExtension
+
 SimplePdfPreviewImageExtension:
     dependencies:
       generator: %$SimplePdfPreviewImagickGenerator
-      folderToSave: "asssets/Uploads/"
+      folderToSave: "assets/Uploads/"
       imagePrefix: "pdf-preview"
 
 Injector:
