--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ before_script:
     # Init PHP
     - phpenv rehash
     - phpenv config-rm xdebug.ini
-    - pecl install imagick
+    - pear config-set preferred_state beta
+    - pecl channel-update pecl.php.net
+    - yes | pecl install imagick
 
     # Install composer dependencies
     - composer validate
