--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ before_script:
     - echo $MAGICK_CONFIGURE_PATH
     - mkdir $MAGICK_CONFIGURE_PATH
     - echo '<policymap>' > $MAGICK_CONFIGURE_PATH/policy.xml
-    - echo '<policy domain="coder" rights="read" pattern="PDF" />' >> $MAGICK_CONFIGURE_PATH/policy.xml
+    - echo '<policy domain="coder" rights="read | write" pattern="PDF" />' >> $MAGICK_CONFIGURE_PATH/policy.xml
     - echo '</policymap>' >> $MAGICK_CONFIGURE_PATH/policy.xml
-    - sudo rm /etc/ImageMagick-6/policy.xml
+    - sudo rm /etc/ImageMagick-7/policy.xml
     # Init PHP
     - phpenv rehash
     - phpenv config-rm xdebug.ini
