--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,6 @@ cache:
     directories:
         - $HOME/.composer/cache/files
 
-env:
-  global:
-     - MAGICK_CONFIGURE_PATH=$HOME/.config/ImageMagick/
-
 matrix:
     include:
         - php: 7.1
@@ -24,12 +20,10 @@ matrix:
 
 before_script:
     # Allow imagemagick to read PDF files
-    - echo $MAGICK_CONFIGURE_PATH
-    - mkdir $MAGICK_CONFIGURE_PATH
-    - echo '<policymap>' > $MAGICK_CONFIGURE_PATH/policy.xml
-    - echo '<policy domain="coder" rights="read | write" pattern="PDF" />' >> $MAGICK_CONFIGURE_PATH/policy.xml
-    - echo '</policymap>' >> $MAGICK_CONFIGURE_PATH/policy.xml
     - sudo rm /etc/ImageMagick-6/policy.xml
+    - sudo echo '<policymap>' > /etc/ImageMagick-6/policy.xml
+    - sudo echo '<policy domain="coder" rights="read | write" pattern="PDF" />' >> /etc/ImageMagick-6/policy.xml
+    - sudo echo '</policymap>' >> /etc/ImageMagick-6/policy.xml
     # Init PHP
     - phpenv rehash
     - phpenv config-rm xdebug.ini
