--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ cache:
     directories:
         - $HOME/.composer/cache/files
 
+#env:
+#  global:
+#     - MAGICK_CONFIGURE_PATH=$HOME/.config/ImageMagick/
+
 matrix:
     include:
         - php: 7.1
@@ -20,10 +24,13 @@ matrix:
 
 before_script:
     # Allow imagemagick to read PDF files
-    - sudo rm /etc/ImageMagick-6/policy.xml
-    - sudo echo '<policymap>' > /etc/ImageMagick-6/policy.xml
-    - sudo echo '<policy domain="coder" rights="read | write" pattern="PDF" />' >> /etc/ImageMagick-6/policy.xml
-    - sudo echo '</policymap>' >> /etc/ImageMagick-6/policy.xml
+#    - echo $MAGICK_CONFIGURE_PATH
+#    - mkdir $MAGICK_CONFIGURE_PATH
+#    - echo '<policymap>' > $MAGICK_CONFIGURE_PATH/policy.xml
+#    - echo '<policy domain="coder" rights="read | write" pattern="PDF" />' >> $MAGICK_CONFIGURE_PATH/policy.xml
+#    - echo '</policymap>' >> $MAGICK_CONFIGURE_PATH/policy.xml
+#    - sudo rm /etc/ImageMagick-6/policy.xml
+    - sudo wget -q -O /etc/ImageMagick-6/policy.xml https://raw.githubusercontent.com/marriott-library/newspaper_works/7052ff3bf58022572870a0720d8c5a705090a833/config/vendor/imagemagick-6-policy.xml
     # Init PHP
     - phpenv rehash
     - phpenv config-rm xdebug.ini
