--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 
 env:
   global:
-     - MAGICK_CONFIGURE_PATH=$HOME/.config/ImageMagick/
+     - MAGICK_CONFIGURE_PATH=$HOME/.config/ImageMagick
 
 matrix:
     include:
