changed default folderToSave

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -9,7 +9,7 @@ SilverStripe\Assets\File:
 Ivoba\SilverStripe\SimplePdfPreview\SimplePdfPreviewImageExtension:
     dependencies:
       generator: '%$Ivoba\SilverStripe\SimplePdfPreview\SimplePdfPreviewImagickGenerator'
-      folderToSave: "Uploads"
+      folderToSave: "pdf-previews"
       imagePrefix: "pdf-preview"
 
 Injector:
