--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=7.1.0",
         "ext-imagick": "*",
-        "silverstripe/framework": "^4"
+        "silverstripe/framework": "^4",
+        "silverstripe/asset-admin": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
