--- a/docker/php71-dev/Dockerfile
+++ b/docker/php71-dev/Dockerfile
@@ -9,6 +9,11 @@ RUN export CFLAGS="$PHP_CFLAGS" CPPFLAGS="$PHP_CPPFLAGS" LDFLAGS="$PHP_LDFLAGS" 
 
 RUN docker-php-ext-install zip pdo pdo_mysql intl mysqli
 
+ARG imagemagic_config=/etc/ImageMagick-6/policy.xml
+
+RUN if [ -f $imagemagic_config ] ; then sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' $imagemagic_config ; else echo did not see file $imagemagic_config ; fi
+
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN usermod -u 1000 www-data
