--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": "^7.4 || ^8.0",
         "ext-imagick": "*",
         "silverstripe/framework": "^4",
         "silverstripe/asset-admin": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
