--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,42 @@
 name: CI silverstripe-simple-pdf-preview
 
 on:
+  pull_request: ~
   push:
-  pull_request:
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
-  ci:
-    name: CI
-    uses: silverstripe/gha-ci/.github/workflows/ci.yml@v1
+  tests-php-7-4:
+    runs-on: ubuntu-latest
+    steps:
+      - name: imagick-preparations
+        run: |
+          sudo apt-get install -y ghostscript
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+          extensions: imagick
+      - name: PHPUnit
+        run: |
+          composer install --prefer-dist --no-interaction --no-ansi --no-progress
+          php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  tests-php-8-0:
+    runs-on: ubuntu-latest
+    steps:
+      - name: imagick-preparations
+        run: |
+          sudo apt-get install -y ghostscript
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          extensions: imagick
+      - name: Allow imagick pdf
+        run: |
+          sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml
+      - name: PHPUnit
+        run: |
+          composer install --prefer-dist --no-interaction --no-ansi --no-progress
+          php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
