--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           SS_DATABASE_SERVER="127.0.0.1"
           SS_DATABASE_USERNAME="root"
           SS_DATABASE_PASSWORD="root"
-          SS_DATABASE_NAME="SS_mysite
+          SS_DATABASE_NAME="SS_mysite"
           EOF
           # debug
           echo ".env is"
