--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           php-version: '7.4'
           extensions: imagick
+      - name: Allow imagick pdf
+        run: |
+          sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml
       - name: env file
         run: |
           # Add .env file and create artifacts directory
