added dev/build in actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,8 @@ jobs:
           # debug
           echo ".env is"
           cat .env
+          # dev/build
+          vendor/bin/sake dev/build flush=1
       - name: PHPUnit
         run: |
           composer install --prefer-dist --no-interaction --no-ansi --no-progress
