--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
           MYSQL_PASSWORD: ss
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: SS_mysite
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - name: imagick-preparations
         run: |
