--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-imagick": "*",
-        "silverstripe/framework": "^4||^5",
-        "silverstripe/asset-admin": "^1.4||^2"
+        "silverstripe/framework": "^4||^5||^6",
+        "silverstripe/asset-admin": "^1.4||^2||^3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
