--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
-        silverstripe: ['4', '5', '6']
+        php: ['8.1', '8.2', '8.3', '8.4']
+        silverstripe: ['5', '6']
         include:
-          - php: '7.4'
-            mysql: '5.7'
-          - php: '8.0'
-            mysql: '5.7'
           - php: '8.1'
             mysql: '8.0'
           - php: '8.2'
@@ -29,18 +25,10 @@ jobs:
           - php: '8.4'
             mysql: '8.0'
         exclude:
-          - php: '7.4'
-            silverstripe: '5'
-          - php: '7.4'
-            silverstripe: '6'
-          - php: '8.0'
-            silverstripe: '5'
-          - php: '8.0'
-            silverstripe: '6'
           - php: '8.1'
             silverstripe: '6'
-          - php: '8.4'
-            silverstripe: '4'
+          - php: '8.2'
+            silverstripe: '6'
 
     services:
       mysql:
@@ -67,9 +55,7 @@ jobs:
           sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml || sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-7/policy.xml
       - name: Install SilverStripe ${{ matrix.silverstripe }}
         run: |
-          if [ "${{ matrix.silverstripe }}" == "4" ]; then
-            composer require "silverstripe/framework:^4" "silverstripe/asset-admin:^1" --no-update --prefer-dist
-          elif [ "${{ matrix.silverstripe }}" == "5" ]; then
+          if [ "${{ matrix.silverstripe }}" == "5" ]; then
             composer require "silverstripe/framework:^5" "silverstripe/asset-admin:^2" --no-update --prefer-dist
           elif [ "${{ matrix.silverstripe }}" == "6" ]; then
             composer require "silverstripe/framework:^6" "silverstripe/asset-admin:^3" --no-update --prefer-dist
