--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-imagick": "*",
-        "silverstripe/framework": "^4||^5||^6",
-        "silverstripe/asset-admin": "^1.4||^2||^3"
+        "silverstripe/framework": "^5||^6",
+        "silverstripe/asset-admin": "^2||^3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
