--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "silverstripe/asset-admin": "^2||^3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10"
+        "phpunit/phpunit": "^9.5 || ^11"
     },
     "autoload": {
         "psr-4": {
