--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.1', '8.2', '8.3', '8.4']
-        silverstripe: ['5', '6']
+        silverstripe: ['5']
         include:
           - php: '8.1'
             mysql: '8.0'
@@ -24,11 +24,6 @@ jobs:
             mysql: '8.0'
           - php: '8.4'
             mysql: '8.0'
-        exclude:
-          - php: '8.1'
-            silverstripe: '6'
-          - php: '8.2'
-            silverstripe: '6'
 
     services:
       mysql:
@@ -55,11 +50,7 @@ jobs:
           sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml || sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-7/policy.xml
       - name: Install SilverStripe ${{ matrix.silverstripe }}
         run: |
-          if [ "${{ matrix.silverstripe }}" == "5" ]; then
-            composer require "silverstripe/framework:^5" "silverstripe/asset-admin:^2" --no-update --prefer-dist
-          elif [ "${{ matrix.silverstripe }}" == "6" ]; then
-            composer require "silverstripe/framework:^6" "silverstripe/asset-admin:^3" --no-update --prefer-dist
-          fi
+          composer require "silverstripe/framework:^5" "silverstripe/asset-admin:^2" --no-update --prefer-dist
       - name: composer install
         run: |
           composer install --prefer-dist --no-interaction --no-ansi --no-progress
