--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     "require": {
         "php": "^8.1",
         "ext-imagick": "*",
-        "silverstripe/framework": "^5||^6",
-        "silverstripe/asset-admin": "^2||^3"
+        "silverstripe/framework": "^5",
+        "silverstripe/asset-admin": "^2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5 || ^11"
+        "phpunit/phpunit": "^9"
     },
     "autoload": {
         "psr-4": {
