--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3', '8.4']
-        silverstripe: ['5']
+        php: ['8.3', '8.4']
         include:
-          - php: '8.1'
-            mysql: '8.0'
-          - php: '8.2'
-            mysql: '8.0'
           - php: '8.3'
             mysql: '8.0'
           - php: '8.4'
@@ -48,9 +43,6 @@ jobs:
       - name: Allow imagick pdf
         run: |
           sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-6/policy.xml || sudo sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<policy domain="coder" rights="read|write" pattern="PDF" \/>/g' /etc/ImageMagick-7/policy.xml
-      - name: Install SilverStripe ${{ matrix.silverstripe }}
-        run: |
-          composer require "silverstripe/framework:^5" "silverstripe/asset-admin:^2" --no-update --prefer-dist
       - name: composer install
         run: |
           composer install --prefer-dist --no-interaction --no-ansi --no-progress
